version/0.31/_sources/api/solver/_autosummary/settings/data_points.rst.txt
:orphan:

.. _data_points:

data_points
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.data_points
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`data_points_child <data_points_child>`


.. rubric:: Included in:

==============================================   ====================================================

Parent                                                                                        Summary

==============================================   ====================================================
:ref:`piecewise_linear <piecewise_linear>`            Data-points for piecewise linear interpolation.

:ref:`piecewise_linear_1 <piecewise_linear_1>`                      Property piecewise-linear values.

:ref:`piecewise_linear_2 <piecewise_linear_2>`       Ranges and values for piecewise-linear property.

==============================================   ====================================================

